updated templates for new XML API

--- a/koha-tmpl/intranet-tmpl/prog/en/admin/aqbudget.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/admin/aqbudget.tmpl
@@ -87,7 +87,7 @@ Koha -- System Administration: Budgets
         Calendar.setup(
           {
             inputField : "filter_startdate",
-            ifFormat : "%Y-%m-%d",,
+            ifFormat : "%Y-%m-%d",
             button : "filter_startdate_button"
           }
         );
@@ -170,6 +170,10 @@ Koha -- System Administration: Budgets
     </td>
   </tr>
   <!-- /TMPL_LOOP --> <!-- budget -->
+<p>
+  <a href="aqbookfund.pl?op=add_form">Add bookfund</a>
+  <a href="aqbudget.pl">Show all budgets</a>
+</p>
 </table>
 
 <div class="paginationBar"><!-- TMPL_VAR NAME="pagination_bar" --></div>
