--- a/koha-tmpl/intranet-tmpl/prog/en/authorities/searchresultlist-auth.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/authorities/searchresultlist-auth.tmpl
@@ -1,8 +1,6 @@
 ﻿<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Authorities
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<!-- TMPL_INCLUDE NAME="authorities-topmenu.inc" -->
-
-<div id="main">
+<!-- TMPL_INCLUDE NAME="menu-authorities.inc" -->
 	<h1 class="authority">Authority search results</h1>
 		<div id="resultnumber">
 			<p>
@@ -83,7 +81,7 @@
 			</p>
 		</div><a href="auth_finder.pl?index=<!-- TMPL_VAR NAME="index" -->&amp;authtypecode=<!-- TMPL_VAR name="authtypecode" -->">Search again</a>	
 	</div>
-</div>
+
 
 <script language="JavaScript" type="text/javascript">
 
