--- a/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
@@ -205,7 +205,7 @@
                 <tr>
                   <!-- /TMPL_IF -->
 			<td>
-				<a href="/cgi-bin/koha/request.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->"><!-- TMPL_VAR NAME="btitle" --></a>
+				<a href="/cgi-bin/koha/reserve/request.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->"><!-- TMPL_VAR NAME="btitle" --></a>
 				<!-- TMPL_IF name="volumeddesc" -->
 					<!-- TMPL_VAR NAME="volumeddesc" -->
 					<!-- TMPL_VAR NAME="itemtype" -->
