--- a/koha-tmpl/intranet-tmpl/prog/en/admin/koha_attr.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/admin/koha_attr.tmpl
@@ -4,7 +4,7 @@
 <!-- TMPL_IF name="delete_confirmed" -->Data Deleted<!-- /TMPL_IF -->
 <!-- TMPL_IF name="else" -->MARC tag Structure<!-- /TMPL_IF -->
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<!-- TMPL_INCLUDE NAME="menu.inc" -->
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
 <h1>KOHA attr matching for biblios,holdings and authorities XML & MARC records</h1>
 <script language="javascript" type="text/javascript">
@@ -67,12 +67,14 @@
 	<div class="data"><table>
 		<caption><!-- TMPL_IF NAME="use-heading-flags-p" --><!-- TMPL_IF NAME="heading-modify-tag-p" -->Modify tag<!-- /TMPL_IF --><!-- TMPL_IF NAME="heading-add-tag-p" -->Add tag<!-- /TMPL_IF --><!-- TMPL_ELSE --><!-- TMPL_VAR NAME="action" --><!-- /TMPL_IF --></caption>
 	<tr><th><label>Kohafield<label></th><td><!-- TMPL_VAR NAME="searchfield" --></td></tr>
-	<tr><th><label for="liblibrarian">Field description</label></th><td><input type="text" id="liblibrarian" name="liblibrarian" value="<!-- TMPL_VAR NAME="liblibrarian" escape="HTML" -->" size="80" maxlength="100" /></td></tr>
-	<tr><th><label for="attr">Bib1 or other defined attribute</label></th><td><input type="text" id="attr" name="attr" value="<!-- TMPL_VAR NAME="attr" escape="HTML" -->" size="40" maxlength="80" />Add all common attributes to field</td></tr>
+	<tr><th><label for="label">Field description</label></th><td><input type="text" id="label" name="label" value="<!-- TMPL_VAR NAME="label" escape="HTML" -->" size="80" maxlength="100" /></td></tr>
+	<tr><th><label for="attr">Main attribute name</label></th><td><input type="text" id="attr" name="attr" value="<!-- TMPL_VAR NAME="attr" escape="HTML" -->" size="40" maxlength="80" />Do not insert the "@attr 1=" part </td></tr>
+	<tr><th><label for="attr">Extra attributes</label></th><td><input type="text" id="extraattr" name="extraattr" value="<!-- TMPL_VAR NAME="extraattr" escape="HTML" -->" size="40" maxlength="80" />any other structure attribute like @attr 4=5 for date</td></tr>
 	<tr><th><label for="taglist">MARC tag for this field</label></th><td><!-- TMPL_VAR NAME="tagfield"  --></td></tr>
 	<tr><th><label for="tagsublist">MARC subfieldcode for this field</label></th><td><!-- TMPL_VAR NAME="tagsubfield"  --></td></tr>
 	<tr><th><label for="sorts">Sorts on this field</label></th><td><!-- TMPL_VAR NAME="sorts" --></td></tr>
 	<tr><th><label for="opacshow">Shows in librarian searches</label></th><td><!-- TMPL_VAR NAME="intrashow" --><label for="opacshow">Shows in opac search</label><!-- TMPL_VAR NAME="opacshow" --></td></tr>
+	<tr><th><label for="facets_label">Grouping name in facets</label></th><td><input type="text" id="facets_label" name="facets_label" value="<!-- TMPL_VAR NAME="facets_label" escape="HTML"-->" size="80" /></td></tr>
 	<tr><th><label for="serverlist">Record type for this field</label></th><td><!-- TMPL_VAR NAME="recordtype"  --></td></tr>
 	
 	
@@ -87,7 +89,7 @@
 <div class="data"><table>
 <caption>Confirm Deletion of Field <em><!-- TMPL_VAR NAME="searchfield" --></em>?</caption>
 	<tr><th>Kohafield: </th><td><!-- TMPL_VAR NAME="searchfield" --></td></tr>
-	<tr><th>Description: </th><td><!-- TMPL_VAR NAME="liblibrarian" --></td></tr>
+	<tr><th>Description: </th><td><!-- TMPL_VAR NAME="label" --></td></tr>
 	</table></div>
 	<form class="inline" action="<!-- TMPL_VAR NAME="script_name" -->" method="post"><input type="hidden" name="op" value="delete_confirmed"/><input type="hidden" name="id" value='<!-- TMPL_VAR NAME="id" -->' />	<input type="submit" class="cancel" value="Yes, Delete this Tag" /></form> <form class="inline" action="<!-- TMPL_VAR NAME="script_name" -->" method="post"><input type="submit" class="submit" value="No, Do Not Delete" /></form>
 <!-- /TMPL_IF -->
@@ -126,6 +128,7 @@
 			<th scope="col">Sorts</th>
 			<th scope="col">Intra Show</th>
 			<th scope="col">Opac Show</th>
+			<th scope="col">Facets Group</th>
 			<th scope="col">Related record</th>
 			
 			
@@ -136,13 +139,14 @@
 		<input type="hidden" value="<!-- TMPL_VAR NAME="attr" -->" />
 		<input type="hidden" name="id" value="<!-- TMPL_VAR NAME="id" -->" />
 		<tr class="highlight">
-			<td><b><!-- TMPL_VAR NAME="marctokoha" --></b></td>
-			<td><!-- TMPL_VAR NAME="attr" --></td>
+			<td><b><!-- TMPL_VAR NAME="kohafield" --></b></td>
+			<td>@attr 1=<!-- TMPL_VAR NAME="attr" --> <!-- TMPL_VAR NAME="extraattr" --></td>
 			<td><!-- TMPL_VAR NAME="tagfield" --><!-- TMPL_VAR NAME="tagsubfield" --></td>
-			<td><!-- TMPL_VAR NAME="liblibrarian" --></td>
+			<td><!-- TMPL_VAR NAME="label" --></td>
 			<td><!-- TMPL_IF NAME="sorts" -->Yes<!-- TMPL_ELSE -->No<!-- /TMPL_IF --></td>
 			<td><!-- TMPL_IF NAME="intrashow" -->Yes<!-- TMPL_ELSE -->No<!-- /TMPL_IF --></td>
 			<td><!-- TMPL_IF NAME="opacshow" -->Yes<!-- TMPL_ELSE -->No<!-- /TMPL_IF --></td>
+			<td><!-- TMPL_VAR NAME="facets_label" --></td>
 			<td><!-- TMPL_VAR NAME="recordtype" --></td>
 			<td><a class="edit" href="<!-- TMPL_VAR NAME="edit" -->">Edit Tag</a> <a class="delete" href="<!-- TMPL_VAR NAME="delete" -->">Delete Tag</a></td>
 		</tr>
@@ -157,13 +161,14 @@
 		<!-- TMPL_LOOP NAME="loop" -->
 	<input type="hidden" name="id" value="<!-- TMPL_VAR NAME="id" -->" />
 		<!-- TMPL_IF NAME="toggle" --><tr class="highlight"><!-- TMPL_ELSE --><tr><!-- /TMPL_IF -->
-			<td><b><!-- TMPL_VAR NAME="marctokoha" --></b></td>
-			<td><!-- TMPL_VAR NAME="attr" --></td>
+			<td><b><!-- TMPL_VAR NAME="kohafield" --></b></td>
+			<td>@attr 1=<!-- TMPL_VAR NAME="attr" --> <!-- TMPL_VAR NAME="extraattr" --></td>
 			<td><!-- TMPL_VAR NAME="tagfield" --><!-- TMPL_VAR NAME="tagsubfield" --></td>
-			<td><!-- TMPL_VAR NAME="liblibrarian" --></td>
+			<td><!-- TMPL_VAR NAME="label" --></td>
 			<td><!-- TMPL_IF NAME="sorts" -->Yes<!-- TMPL_ELSE -->No<!-- /TMPL_IF --></td>
 			<td><!-- TMPL_IF NAME="intrashow" -->Yes<!-- TMPL_ELSE -->No<!-- /TMPL_IF --></td>
 			<td><!-- TMPL_IF NAME="opacshow" -->Yes<!-- TMPL_ELSE -->No<!-- /TMPL_IF --></td>
+			<td><!-- TMPL_VAR NAME="facets_label" --></td>
 			<td><!-- TMPL_VAR NAME="recordtype" --></td>
 			<td><a class="edit" href="<!-- TMPL_VAR NAME="edit" -->">Edit Tag</a> <a class="delete" href="<!-- TMPL_VAR NAME="delete" -->">Delete Tag</a></td>
 		</tr>
