--- a/koha-tmpl/intranet-tmpl/prog/en/authorities/auth_finder.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/authorities/auth_finder.tmpl
@@ -1,9 +1,8 @@
 ﻿<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Authorities
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<!-- TMPL_INCLUDE NAME="authorities-topmenu.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-authorities.inc" -->
 
 
-<div id="main">
 
 <h1>Authority search</h1>
 
@@ -47,7 +46,7 @@
 		</p>
 	</div>
 </form>
-</div>
+
 
 
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
