--- a/koha-tmpl/intranet-tmpl/prog/en/authorities/authorities-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/authorities/authorities-home.tmpl
@@ -1,10 +1,8 @@
 ﻿<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Authorities
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<!-- TMPL_INCLUDE NAME="masthead.inc" -->
-<!-- TMPL_INCLUDE NAME="authorities-topmenu.inc" -->
-<!-- TMPL_INCLUDE NAME="intranet-nav.inc" -->
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-authorities.inc" -->
 
-<div id="main">
 
 <form name="f" method="post">
 	<input type="hidden" name="op" value="do_search" />
@@ -38,7 +36,7 @@
 			<input type="submit" value="Start search" class="submit">
 		</p>
 </form>
-</div>
+
 
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
 
