--- a/koha-tmpl/intranet-tmpl/prog/en/authorities/searchresultlist.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/authorities/searchresultlist.tmpl
@@ -1,10 +1,8 @@
 ﻿<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Authorities
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<!-- TMPL_INCLUDE NAME="masthead.inc" -->
-<!-- TMPL_INCLUDE NAME="authorities-topmenu.inc" -->
-<!-- TMPL_INCLUDE NAME="intranet-nav.inc" -->
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-authorities.inc" -->
 
-<div id="main">
 	<h1 class="authority">Authority search results</h1>
 	<div id="resultnumber">
 		<p>
@@ -48,7 +46,7 @@
 				<tr bgcolor="<!-- TMPL_VAR NAME="toggle" -->">
 				
 					<td><!-- TMPL_VAR NAME="summary" --></td>
-					<td><a href="/cgi-bin/koha/catalogue/catalogue-search.pl?kohafield=auth_authid&amp;value=<!-- TMPL_VAR NAME="authid" -->&amp;op=do_search&amp;zoom=1" class="button authority"><!-- TMPL_VAR NAME="used" --> biblio(s)</a></td>
+					<td><a href="/cgi-bin/koha/catalogue/catalogue-search.pl?kohafield=authid&amp;value=<!-- TMPL_VAR NAME="authid" -->&amp;op=do_search&amp;zoom=1" class="button authority"><!-- TMPL_VAR NAME="used" --> biblio(s)</a></td>
 					
 					<td><!-- TMPL_VAR NAME="authid" -->&nbsp;
 						<!-- TMPL_UNLESS name="used" -->
@@ -88,7 +86,7 @@
 From:<input type="text" size="10" name="mergefrom" id="mergefrom" value=""/>&nbsp;&nbsp;To:<input type="text" size="10" id="mergeto" name="mergeto" value=""/>
 <input type="button" class="submit" value="Merge" onclick="do_merge(); return false;" /></form>
 					
-</div>
+
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
 
 
