--- a/koha-tmpl/intranet-tmpl/prog/en/tools/tools-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/tools/tools-home.tmpl
@@ -7,6 +7,10 @@
 
 <table>
 <caption>Various tools</caption>
+	<tr>
+		<th><a href="/cgi-bin/koha/z3950/zebraqueue_windows_start.pl">ZEBRA queue starter--for Windows</a></th>
+		<td> Starts Zebra queue if stopped or system restarted. ZEBRA queue is required for the system to update ZEBRA</td>
+	</tr>
 <tr>
 	<th><a href="/cgi-bin/koha/tools/barcodes.pl">Barcode generator</a></th>
 	<td>Generate your barcodes</td>
@@ -35,6 +39,9 @@
 	<th><a href="/cgi-bin/koha/tools/overduerules.pl">overdue rules</a></th>
 	<td>Rules for overdue books</td>
 </tr>
+<th><a href="/cgi-bin/koha/barcodes/cbarcodes.pl">Membership cards</a></th>
+		<td>create membership cards from member cardnumbers
+		</td>
 </table>
 
 
