Removing hardcoded default template image link

--- a/koha-tmpl/intranet-tmpl/prog/en/serials/subscription-bib-search.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/serials/subscription-bib-search.tmpl
@@ -41,8 +41,8 @@
 			</select></td><td>
 		<label for="orderby">Ordered by</label>
 			<select id="orderby" name="order" size="1">
-				<option value="title">Title</option>
-				<option value="author">Author</option>
+				<option value="title i<">Title</option>
+				<option value="author i<">Author</option>
 					</select>
 		</td></tr>
 		</table>
