--- a/koha-tmpl/intranet-tmpl/prog/en/reviews/reviewswaiting.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/reviews/reviewswaiting.tmpl
@@ -1,25 +1,49 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Reviews waiting for Approval --<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<!-- Additions to enable Calendar system -->
-<link rel="stylesheet" type="text/css" href="<!-- TMPL_VAR name="themelang" -->/includes/calendar/calendar-system.css">
-<!-- End of additions --><!-- Additions to enable Calendar system -->
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/includes/calendar/calendar.js"></script>
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/includes/calendar/calendar-en.js"></script>
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/includes/calendar/calendar-setup.js"></script>
-<!-- End of additions -->
-<!-- ------------------------MAIN BODY OF PAGE------------------------ -->
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
+    Reviews waiting for Approval --
+<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!--TMPL_INCLUDE NAME="menu-serials.inc" -->
 
 <h1>Reviews</h1>
 
+<!-- TMPL_IF NAME="reviews" -->
 <table>
+    <tr>
+        <th>
+            Authors
+        </th>
+        <th>
+            On biblio
+        </th>
+        <th>
+            Review
+        </th>
+        <th>
+            &nbsp;
+        </th>
+    </tr>
 <!-- TMPL_LOOP NAME="reviews" -->
-<tr>
-<td><!-- TMPL_VAR NAME="review" -->
-</td>
-<td><a href="/cgi-bin/koha/reviews/reviewswaiting.pl?op=approve&reviewid=<!-- TMPL_VAR NAME="reviewid" -->">Approve</a></td>
-<td><a href="/cgi-bin/koha/reviews/reviewswaiting.pl?op=delete&reviewid=<!-- TMPL_VAR NAME="reviewid" -->">Delete</a></td>
-</tr>
+    <tr>
+        <td>
+            <!-- TMPL_VAR NAME="surname" --> 
+            <!-- TMPL_VAR NAME="firstname" -->
+        </td>
+        <td>
+            <!-- TMPL_VAR NAME="bibliotitle" -->
+        </td>
+        <td>
+            <!-- TMPL_VAR NAME="review" -->
+        </td>
+        <td>
+            <a href="/cgi-bin/koha/reviews/reviewswaiting.pl?op=approve&reviewid=<!-- TMPL_VAR NAME="reviewid" -->">Approve</a> | 
+            <a href="/cgi-bin/koha/reviews/reviewswaiting.pl?op=delete&reviewid=<!-- TMPL_VAR NAME="reviewid" -->">Delete</a>
+        </td>
+    </tr>
 <!-- /TMPL_LOOP -->
 </table>
+<!-- TMPL_ELSE -->
+    <b>No reviews has been writed.</b>
+<!-- /TMPL_IF -->
 
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
-
