rel_3_0 moved to HEAD

--- a/koha-tmpl/intranet-tmpl/prog/en/help/admin/branches.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/help/admin/branches.tmpl
@@ -1,6 +1,6 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Online Help: System Preferences -- Branches<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
-<div id="main-compact">
+
 <h1>Help: Library Branches</h1>
 
 <p>Fill in information about your library service outlets on this page.</p>
@@ -9,4 +9,4 @@
 
 <p>Now add the names and addresses, phone numbers, etc of your libraries in the "Branches" section. (All of your libraries should be described here, not just the branch libraries.) Give each library a unique and easily-remembered code (maximum of four characters). This code will be used in Koha's database to identify each library. When libraries are listed in Koha, they will be listed in alphabetical order by code. (Note that until you set your branch the first time you use a computer to circulate items in Koha, the branch will default to the first library in the alphabetical code list -- be careful to set the branch the first time you use Koha or whenever you add a new computer!)</p>
 
-<!-- TMPL_INCLUDE name="help-bottom.inc" -->
+<!-- TMPL_INCLUDE name="intranet-bottom.inc" -->
