--- a/koha-tmpl/intranet-tmpl/prog/en/help/admin/categorie.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/help/admin/categorie.tmpl
@@ -1,5 +1,5 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Online Help: System Preferences -- Borrower Categories<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<div id="main-compact">
+
 <h1>Borrower Categories</h1>
 
 <p>Here is where you define the types of users of your library and how they will be handled.</p>
@@ -23,4 +23,4 @@
 
 <h2>Overdue Notice Required</h2>
 <p>Overdue Notice Required lets you bypass generating overdue notices for this user type.</p>
-<!-- TMPL_INCLUDE name="help-bottom.inc" -->
+<!-- TMPL_INCLUDE name="intranet-bottom.inc" -->
