--- a/koha-tmpl/intranet-tmpl/prog/en/help/bull/subscription-detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/help/bull/subscription-detail.tmpl
@@ -19,11 +19,11 @@
 				<li>Last value / begins with : the last value calculated or the 1st value (when adding a subscription</li>
 			</ul>
 		<h2>Sample</h2>
-			Consider the formula <b>N°{X}/{Y}</b>. The following XYZ settings :
+			Consider the formula <b>#{X}/{Y}</b>. The following XYZ settings :
 			<li> <b>X</b> add <b>1</b> once every <b>4</b> times. When more than <b>9999999</b> set back to <b>empty</b>. Begins with <b>2004</b></li>
 			<li> <b>Y</b> add <b>1</b> once every <b>1</b> times. When more than <b>4</b> set back to <b>4</b>. Begins with <b>1</b></li>
 			will result in the following issues numbers :
-			<b>N°2004/1,N°2004/2,N°2004/3,N°2004/4,N°2005/1,N°2005/2,N°2005/3,N°2005/4,N°2006/1
+			<b>#2004/1,#2004/2,#2004/3,#2004/4,#2005/1,#2005/2,#2005/3,#2005/4,#2006/1
 		<p>
 		</p>
 
