--- a/koha-tmpl/intranet-tmpl/prog/en/help/admin/aqbookfund.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/help/admin/aqbookfund.tmpl
@@ -1,5 +1,5 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Online Help: System Preferences -- Book Fund Administration<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<div id="main-compact">
+
 
 <h1>Book Fund Administration</h1>
 
@@ -13,4 +13,4 @@
 
 <p>Once you have set up a fund, you will see a link to a page for setting up the fund budget. Here you will enter the beginning and ending dates of your budget year and the amount of money in that particular budget line. Do not use any kind of currency notation (like "$") or commas when entering the number. (Commas will be converted to decimal points.) NOTE: Your dates will not saved correctly unless you have set your date format in the System Preferences section of the Parameters page -- DO THIS BEFORE setting budgets.)</p>
 
-<!-- TMPL_INCLUDE name="help-bottom.inc" -->
+<!-- TMPL_INCLUDE name="intranet-bottom.inc" -->
