--- a/koha-tmpl/intranet-tmpl/prog/en/help/admin/marc_subfields_structure.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/help/admin/marc_subfields_structure.tmpl
@@ -1,5 +1,5 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Online Help: System Preferences -- MARC tag structure administration<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<div id="main-compact">
+
 <h1>MARC tag structure administration</h1>
 <p>Koha allows you to specify which MARC tags you want to use and which you want to ignore. When you downloaded and installed Koha, you also got the entire list of MARC21 tags and subfields in current use. Now you need to use the administration page to edit this list and tell Koha which tags you want to use and how you want to use them.</p>
 <p>You can define as the marc tag structure for each biblio framework you have defined</p>
@@ -41,12 +41,11 @@ Collapsed')
    8 => !OPAC !Intranet !Editor !Collapsed<br/>
    9 => Future use<br/>
 </code>
-
 <li>URL : if checked, the subfield is an URL, and can be clicked</li>
 <li>Auth value : means the value is not free, but in the authorised value list of the selected type</li>
 <li>thesaurus : means that the value is not free, but can be searched in authority/thesaurus of the selected category</li>
 <li>plugin : means the value is calculated or managed by a plugin. Plugins can do almost anything. For example, in UNIMARC there are plugins for every 1xx fields that are coded fields. The plugin is a huge help for cataloger ! There are also two plugins (unimarc_plugin_210c and unimarc_plugin_225a that can "magically" find the editor from an ISBN, and the collection list for the editor)</li>
-<li>link : If you enter a field/subfield here (200b), a little glass appears after the subfield. If the user clic on the glass, a search is done on the DB for the field/subfield with the same value. Can be used for 2 main topic : 
+<li>link : If you enter a field/subfield here (200b), a little glass appears after the subfield. If the user click on the glass, a search is done on the DB for the field/subfield with the same value. Can be used for 2 main topic : 
 	<ul>
 		<li>on a field like author (200f in UNIMARC), put 200f here, you will be able to see all biblios with the same author</li>
 		<li>on a field that is a link (4xx) to reach another biblio. For example, put 011a in 464$x, will find the serial that was previously with this issn. With the 4xx pligin, you get a powerful tool to manage biblios connected to biblios</li>
@@ -54,4 +53,4 @@ Collapsed')
 </li>
 </ul>
 
-<!-- TMPL_INCLUDE name="help-bottom.inc" -->
+<!-- TMPL_INCLUDE name="intranet-bottom.inc" -->
