--- a/koha-tmpl/intranet-tmpl/prog/en/help/admin/z3950servers.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/help/admin/z3950servers.tmpl
@@ -1,5 +1,5 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Online Help: System Preferences -- Z39.50 servers administration<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<div id="main-compact">
+
 <h1>Z39.50 servers administration</h1>
 <p>Defines the Z39.50 servers you want Koha to search.</p>
 
@@ -13,4 +13,4 @@
 
 <p>IMPORTANT NOTE : the z3950search will NOT work until your system administrator has not activated the z3950 client daemon on your server. The daemon is in KohaDirectory/script/z3950daemon. It should be added to rc.d to be launched during server boot.</p>
 
-<!-- TMPL_INCLUDE name="help-bottom.inc" -->
+<!-- TMPL_INCLUDE name="intranet-bottom.inc" -->
