--- a/koha-tmpl/intranet-tmpl/prog/en/help/bull/subscription-add.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/help/bull/subscription-add.tmpl
@@ -18,13 +18,13 @@
 				<li>Last value / begins with : the last value calculated or the 1st value (when adding a subscription</li>
 			</ul>
 		<h2>Sample</h2>
-		Consider the formula <b>N°{X}/{Y}</b>. The following XYZ settings :
+		Consider the formula <b>#{X}/{Y}</b>. The following XYZ settings :
 		<ul>
 			<li> <b>X</b> add <b>1</b> once every <b>4</b> times. When more than <b>9999999</b> set back to <b>empty</b>. Begins with <b>2004</b></li>
 			<li> <b>Y</b> add <b>1</b> once every <b>1</b> times. When more than <b>4</b> set back to <b>4</b>. Begins with <b>1</b></li>
 		</ul>
 		will result in the following issues numbers :
-		<p>N°2004/1, N°2004/2, N°2004/3, N°2004/4, N°2005/1, N°2005/2, N°2005/3, N°2005/4, N°2006/1</p>
+		<p>#2004/1, #2004/2, #2004/3, #2004/4, #2005/1, #2005/2, #2005/3, #2005/4, #2006/1</p>
 		<p>
 			<b>Note:</b> when you add a subscription, Koha consider you already have done the order, or that you will do it soon. So, NO information is sent to the acquisition module. This is not the case when the subscription expires. In this case, a subscription renewal creates a "suggestion" that is sent to the acquisition module.
 		</p>
