--- a/rss/lastAcquired-2.0.tmpl
+++ b/rss/lastAcquired-2.0.tmpl
@@ -20,12 +20,12 @@
 <!-- TMPL_LOOP NAME="ITEMS" -->
  <item>
   <title><!-- TMPL_VAR NAME="TITLE" --><!-- TMPL_IF NAME="AUTHOR" --> by <!-- TMPL_VAR NAME="AUTHOR" --><!-- /TMPL_IF --></title>
-  <link>http://opac.library.org.nz/cgi-bin/koha/opac-detail.pl?bib=<!-- TMPL_VAR NAME="bibid" --></link>
+  <link>http://opac.library.org.nz/cgi-bin/koha/opac-detail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" --></link>
 <description><![CDATA[<!-- TMPL_VAR NAME="TITLE" --><!-- TMPL_IF NAME="AUTHOR" --> by <!-- TMPL_VAR NAME="AUTHOR" --><!-- /TMPL_IF -->
 <br><!-- TMPL_IF NAME="publishercode" --><!-- TMPL_VAR NAME="place" --> <!-- TMPL_VAR NAME="publishercode" --> <!-- TMPL_VAR NAME="publicationyear" --><br><!-- /TMPL_IF -->
 <!-- TMPL_IF NAME="pages" --><!-- TMPL_VAR NAME="pages" --><!-- TMPL_VAR NAME="illus" --><!-- TMPL_VAR NAME="size" --><!-- /TMPL_IF -->
 <!-- TMPL_IF NAME="notes" --><p><!-- TMPL_VAR NAME="notes" --></p><!-- /TMPL_IF --><br>
-<a href="http://opac.library.org.nz/cgi-bin/koha/opac-detail.pl?bib=<!-- TMPL_VAR NAME="bibid" -->">View Details</a> | <a href="http://opac.library.org.nz/cgi-bin/koha/opac-reserve.pl?bib=<!-- TMPL_VAR NAME="bibid" -->">Reserve this Item</a><!-- TMPL_IF NAME="author" --> | <a href="http://opac.library.org.nz/cgi-bin/koha/opac-search.pl?marclist=biblio.author&amp;and_or=and&amp;excluding=&amp;operator=contains&amp;value=<!-- TMPL_VAR NAME="author" -->&amp;resultsperpage=20&amp;orderby=biblio.title&amp;op=do_search">More by this Author</a><!-- /TMPL_IF -->
+<a href="http://opac.library.org.nz/cgi-bin/koha/opac-detail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">View Details</a> | <a href="http://opac.library.org.nz/cgi-bin/koha/opac-reserve.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">Reserve this Item</a><!-- TMPL_IF NAME="author" --> | <a href="http://opac.library.org.nz/cgi-bin/koha/opac-search.pl?marclist=biblio.author&amp;and_or=and&amp;excluding=&amp;operator=contains&amp;value=<!-- TMPL_VAR NAME="author" -->&amp;resultsperpage=20&amp;orderby=biblio.title&amp;op=do_search">More by this Author</a><!-- /TMPL_IF -->
 ]]></description>
  </item>
 <!-- /TMPL_LOOP -->
