--- a/rss/lastAcquired.tmpl
+++ b/rss/lastAcquired.tmpl
@@ -21,7 +21,7 @@
 <TMPL_LOOP NAME=ITEMS>
  <item>
   <title><TMPL_VAR TITLE>, by <TMPL_VAR AUTHOR></title>
-  <link>http://opac.library.org.nz/cgi-bin/koha/opac-detail.pl?bib=<TMPL_VAR NAME="bibid"></link>
+  <link>http://opac.library.org.nz/cgi-bin/koha/opac-detail.pl?biblionumber=<TMPL_VAR NAME="biblionumber"></link>
 
  </item>
 </TMPL_LOOP>
