--- a/koha-tmpl/intranet-tmpl/prog/en/tools/tools-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/tools/tools-home.tmpl
@@ -8,8 +8,8 @@
 <table>
 <caption>Various tools</caption>
 <tr>
-    <td><a href="/cgi-bin/koha/tools/barcodes.pl">Barcode generator</a></td>
-    <td>Generate your barcodes</td>
+    <td><a href="/cgi-bin/koha/tools/barcodes.pl">Label generator</a></td>
+    <td>Generate spine labels and barcodes</td>
 </tr>
 <tr>
     <td><a href="/cgi-bin/koha/tools/holidays.pl">Holidays</a></td>
@@ -17,31 +17,31 @@
 </tr>
 <tr>
     <td><a href="/cgi-bin/koha/tools/export.pl">Export</a></td>
-    <td>Export datas</td>
+    <td>Export data</td>
 </tr>
 <tr>
-    <td><a href="/cgi-bin/koha/tools/import.pl">Import</a></td>
-    <td>Import datas in the reservoir</td>
+    <td><a href="/cgi-bin/koha/tools/import.pl">Reservoir Import</a></td>
+    <td>Import data into the reservoir</td>
 </tr>
 <tr>
     <td><a href="/cgi-bin/koha/tools/koha-news.pl">News</a></td>
-    <td>A basic news system for OPAC & librarian interfaces</td>
+    <td>Write news for OPAC &amp; staff interfaces</td>
 </tr>
 <tr>
     <td><a href="/cgi-bin/koha/tools/letter.pl">Letters</a></td>
-    <td>Define letters </td>
+    <td>Define letters (notifications for overdues, etc.)</td>
 </tr>
 <tr>
-    <td><a href="/cgi-bin/koha/tools/overduerules.pl">overdue rules</a></td>
+    <td><a href="/cgi-bin/koha/tools/overduerules.pl">Overdue rules</a></td>
     <td>Rules for overdue books</td>
 </tr>
 <tr>
     <td><a href="/cgi-bin/koha/tools/inventory.pl">Inventory/stocktaking</a></td>
-    <td>Tool to inventory (stocktaking) of your catalogue</td>
+    <td>Perform inventory (stocktaking) of your catalogue</td>
 </tr>
 <tr>
     <td><a href="/cgi-bin/koha/tools/cleanborrowers.pl">Clean borrowers</a></td>
-    <td>Delete some old private data/reading history relative to borrowers.</td>
+    <td>Delete old borrowers and anonymize circulation history (deletes borrower reading history)</td>
 </tr>
 <tr>
     <td><a href="/cgi-bin/koha/tools/itemslost.pl">Items lost</a></td>
