--- a/koha-tmpl/intranet-tmpl/prog/en/circ/circulation.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/circ/circulation.tmpl
@@ -1,16 +1,15 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Circulation
-<!-- TMPL_IF Name="borrowernumber" -->
-: Issuing to <!-- TMPL_VAR name="surname" -->, <!-- TMPL_VAR name="firstname" -->
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha &rsaquo; Circulation
+<!-- TMPL_IF NAME="borrowernumber" -->
+&rsaquo; Issuing to <!-- TMPL_VAR name="surname" -->, <!-- TMPL_VAR name="firstname" -->
 (<!-- TMPL_VAR NAME="cardnumber" -->)
 <!-- /TMPL_IF -->
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-circ.inc" -->
-
 <!-- TMPL_IF NAME="borrowernumber" -->
     <h1>Issues</h1>
 <!-- TMPL_ELSE -->
-    <h1>Circulation issues</h1>
+    <h1>Circulation &rsaquo; Issues</h1>
 <!-- /TMPL_IF -->
 
 <!--  INITIAL BLOC : PARAMETERS & BORROWER INFO -->
@@ -114,7 +113,7 @@
 
     <p>
     <label for="findborrower">Enter borrower card number or partial last name: </label>
-    <input name="findborrower" type="text" size="40";/>
+    <input id="findborrower" name="findborrower" type="text" size="40"/>
     </p>
 
     <input type="hidden" name="branch" value="<!-- TMPL_VAR NAME="branch" -->" />
@@ -860,7 +859,7 @@ No patron matched <!-- TMPL_VAR name="message" -->
     *  This function activate the numlayer div.
     */
     function active(numlayer){
-        for (i=0; i <= 1 ; i++ ) {
+        for (i=0; i &lt;= 1 ; i++ ) {
             var tab;
             try{
                 tab = document.getElementById(i+'XX');
